--- a/README
+++ b/README
@@ -1,7 +1,5 @@
 Zeppa-Android
 
-Android client for zeppa mobile app. This is my shit, Android always has and always will be the most superior mobile platform.
-
-Lets make this shit happen
+Android client for zeppa mobile app.
 
 "Anybody can change the world. It's simply a matter of doing it"
