Updated query implementation
Added updated queries to Android implementation

--- a/README
+++ b/README
@@ -3,3 +3,8 @@ Zeppa-Android
 Android client for zeppa mobile app.
 
 "Anybody can change the world. It's simply a matter of doing it"
+
+
+Setup Instructions:
+
+1. Clone Zeppa-Android project and import into eclipse
