--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,11 +9,9 @@
     <string name="addremove_tags">Add/Remove Tags</string>
     <string name="agenda_title">Agenda</string>
     <string name="app_name">Zeppa</string>
-    
-    
-    <!-- B -->
-	<string name="birthday:">Birthday:</string>
 
+    <!-- B -->
+    <string name="birthday:">Birthday:</string>
 
     <!-- C -->
     <string name="calendar_list_title">Calendars Synced</string>
@@ -21,7 +19,6 @@
     <string name="cancel"> Cancel</string>
     <string name="casual">Casual</string>
     <string name="chime_in">Chime in&#8230;</string>
-    <string name="contacts">Contacts</string>
     <string name="contacts_using">Friends Using Zeppa</string>
     <string name="couldntfind">Couldn\'t find this&#8230; awkward</string>
     <string name="create">Create</string>
@@ -32,7 +29,7 @@
 
     <!-- D -->
     <string name="delete">Delete</string>
-    <string name="desciption_newevent">Description</string>
+    <string name="desciption_newevent">Anything to add?</string>
     <string name="directions">Directions</string>
     <string name="discussion_board">Discussion Board:</string>
     <string name="dismiss">Dismiss</string>
@@ -49,12 +46,13 @@
     <string name="error_newevent">Error Creating Event</string>
     <string name="error_signin">Sign in Error</string>
     <string name="event_details">Event Details</string>
-    <string name="event_title">Event name</string>
+    <string name="event_title">What?</string>
     <string name="example_email">Example@gmail.com</string>
 
     <!-- F -->
     <string name="feed_title">Feed</string>
-    <string name="feedback_messagefromzeppa">In Our Never Ending Process To Improve Zeppa, We Would Love To Hear From You! Provide Any Feedback, Comments, Or Suggestions Below And We Will Review It</string>
+    <string name="feedback">Feedback</string>
+    <string name="feedback_messagefromzeppa">In Our Never Ending Process To Improve Zeppa, We Would Love To Hear From You! Provide Any Feedback, Comments Or Suggestions Below And We Will Review It</string>
     <string name="find_friends_message">This takes a long time if you have a lot of friends(Phone Contacts)</string>
     <string name="find_time">Find a Time</string>
     <string name="friday_calendar_short">Fr</string>
@@ -68,7 +66,7 @@
     <string name="getting_details">Getting Account Details</string>
     <string name="going">Going</string>
     <string name="got_it">Got It</string>
-    
+
     <!-- H -->
     <string name="hall_of_fame">Hall of Fame</string>
     <string name="home">Home</string>
@@ -86,17 +84,18 @@
     <string name="join">Join</string>
 
     <!-- L -->
-    <string name="leave">Leave</string>    
+    <string name="leave">Leave</string>
     <string name="loading">Loading&#8230;</string>
     <string name="location_long_title">Set Maps Address</string>
     <string name="location_long">42 Wallaby way, Sydney</string>
-    <string name="location_short"> Location</string>
+    <string name="location_short">Where?</string>
     <string name="login_activity">Login</string>
 
     <!-- M -->
     <string name="manage_tags">Manage Event Tags</string>
     <string name="mass_email">Mass Email</string>
     <string name="mass_text">Mass Text</string>
+    <string name="minglers">Minglers</string>
     <string name="monday_calendar_short">Mo</string>
     <string name="my_account">My Account</string>
     <string name="my_profile">My Profile</string>
@@ -108,22 +107,23 @@
     <string name="no">No</string>
     <string name="no_repost">No Repost</string>
     <string name="notifications">Notifications</string>
-    
+
     <!-- O -->
     <string name="one_moment">One moment, please</string>
-    
-    <!-- P 
+
+    <!--
+         P 
     	- Public/ Private threw errors w/out '_' appended
-    	-->
-    	
+    -->
+
     <string name="password">Password</string>
     <string name="pending_requests">Pending Friend Requests</string>
     <string name="phone:">Phone:</string>
     <string name="post">Post</string>
     <string name="posting_event">Posting Event</string>
     <string name="private_">Private</string>
-	<string name="public_">Public</string>
-    
+    <string name="public_">Public</string>
+
     <!-- R -->
     <string name="remember_me">Remember Me</string>
     <string name="repost">Repost</string>
@@ -151,7 +151,7 @@
 
     <!-- U -->
     <string name="usage">Usage</string>
-    
+
     <!-- V -->
     <string name="verifying">Verifying Identity</string>
 
@@ -162,9 +162,11 @@
 
     <!-- Y -->
     <string name="yes">Yes</string>
-    
+
     <!-- Z -->
     <string name="zeppa">Zeppa</string>
+    <string name="zeppacalendar_summary">@string/zeppa</string>
+    <string name="zeppacalendar_description">Calendar for all your activities</string>
 
     <!-- Content Description -->
     <string name="contdesc_addexactlocation">Add Exact Location</string>
@@ -189,43 +191,39 @@
 
     <!-- Action Menu Options -->
     <string name="menu_aboutus">About Us</string>
+    <string name="menu_activity">Activity</string>
     <string name="menu_addcontact">Add Contact</string>
     <string name="menu_explain">Explain This</string>
     <string name="menu_help">Help</string>
     <string name="menu_newevent">New Event</string>
-    <string name="menu_notifications">Notifications</string>
     <string name="menu_refresh">Refresh</string>
     <string name="menu_search">Search</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_signout">Sign Out</string>
 
-    
     <!-- Error Description -->
     <string name="error_newevent_title">You need to add a title!</string>
     <string name="error_newevent_location">You need to let people know where this is!</string>
     <string name="error_newevent_time">This isn\'t a good time&#8230;</string>
-    
-    
+
     <!-- Toast Texts -->
     <string name="toast_feedback_success">Feedback Sent!</string>
     <string name="toast_network_error">Connection Error</string>
-    
+
     <!-- Static Arrays -->
 
     <string-array name="navigation_options">
         <item>@string/my_profile</item>
         <item>@string/home</item>
-        <item>@string/contacts</item>
+        <item>@string/minglers</item>
         <item>@string/send_feedback</item>
         <item>@string/settings</item>
     </string-array>
-    
     <string-array name="home_tab_options">
         <item>@string/calendar_title</item>
         <item>@string/feed_title</item>
         <item>@string/agenda_title</item>
     </string-array>
-    
     <string-array name="event_types">
         <item>@string/casual</item>
         <item>@string/public_</item>
