Updates to work with latest backend
Updates so the Android Client works with backend

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -167,7 +167,7 @@
     <!-- Z -->
     <string name="zeppa">Zeppa</string>
     <string name="zeppacalendar_summary">@string/zeppa</string>
-    <string name="zeppacalendar_description">Calendar for all your activities</string>
+    <string name="zeppacalendar_description">Calendar for all your activities started through Zeppa</string>
 
     <!-- Content Description -->
     <string name="contdesc_addexactlocation">Add Exact Location</string>
