--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- A -->
-    <string name="activity_title">Activity</string>
+    <string name="activity_title">Notifications</string>
     <string name="add">Add</string>
     <string name="add_account">Add Account</string>
     <string name="add_event">Add Event</string>
